--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -365,6 +365,11 @@ Parsing a C<sub> definition could cause a use after free if the C<sub>
 keyword was followed by whitespace including newlines (and comments.)
 [perl #131836]
 
+=item *
+
+The tokenizer now correctly adjusts a parse pointer when skipping
+whitespace in a C< ${identifier} > construct.  [perl #131949]
+
 =back
 
 =head1 Known Problems
