perldelta for f8ac814f18bf, 8c573bee8897, f3d6edb2a15d

--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -89,7 +89,7 @@ There may well be none in a stable release.
 
 =item *
 
-XXX
+Slightly improved performance when parsing stash names.  [perl #129990]
 
 =back
 
