I18N-Langinfo: Use new fcn Perl_langinfo()
This automatically fixes the bug where it always returned a dot for the
decimal point character.

--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -125,7 +125,10 @@ XXX
 
 =item *
 
-L<XXX> has been upgraded from version A.xx to B.yy.
+L<I18N::Langinfo> has been upgraded from version 0.13 to 0.13.
+This fixes a bug in which the underlying locale was ignored for the
+C<RADIXCHAR> (always was returned as a dot, and the C<THOUSEP> (always
+empty).  Now the locale-appropriate values are returned.
 
 =back
 
