--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -329,7 +329,7 @@ Several built-in functions previously had bugs that could cause them to
 write to the internal stack without allocating room for the item being
 written. In rare situations, this could have led to a crash. These bugs have
 now been fixed, and if any similar bugs are introduced in future, they will
-be detected automatically in debugging builds.
+be detected automatically in debugging builds. [perl #131732]
 
 =item *
 
