--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -103,6 +103,10 @@ XXX
 
 L<base> has been upgraded from version 2.25 to 2.26.
 
+The effects of dotless C<@INC> on this module have been limited by the
+introduction of a more refined and accurate solution for removing
+C<'.'> from C<@INC> while reducing the false positives.
+
 =item *
 
 L<charnames> has been upgraded from version 1.44 to 1.45.
@@ -270,17 +274,6 @@ XXX List any platforms that this version of perl no longer compiles on.
 
 =over 4
 
-=item Windows
-
-=over 4
-
-=item *
-
-Support for compiling perl on Windows using Microsoft Visual Studio 2017
-(containing Visual C++ 14.1) has been added.
-
-=back
-
 =back
 
 =head2 Platform-Specific Notes
@@ -292,9 +285,32 @@ L</Modules and Pragmata> section.
 
 =over 4
 
-=item XXX-some-platform
+=item FreeBSD
 
-XXX
+=over 4
+
+=item *
+
+Building with C<g++> on FreeBSD-11.0 has been fixed. [perl #131337]
+
+=back
+
+=item Windows
+
+=over 4
+
+=item *
+
+Support for compiling perl on Windows using Microsoft Visual Studio 2017
+(containing Visual C++ 14.1) has been added.
+
+=item *
+
+Building XS modules with C<gcc> 6 in a 64-bit build of Perl failed due to
+incorrect mapping of C<strtoll> and C<strtoull>. This has now been fixed.
+[perl #131726] [cpan #121683] [cpan #122353]
+
+=back
 
 =back
 
@@ -348,6 +364,40 @@ Attempting to apply an attribute to an C<our> variable where a
 function of that name already exists could result in a NULL pointer
 being supplied where an SV was expected, crashing perl.  [perl
 #131597]
+
+=item *
+
+The code that vivifies a typeglob out of a code ref made some false assumptions
+that could lead to a crash in cases such as C<< $::{"A"} = sub {}; \&{"A"} >>.
+This has now been fixed. [perl #131085]
+
+=item *
+
+C<my_atof2> no longer reads beyond the terminating NUL, which previously
+occurred if the decimal point is immediately before the NUL. [perl #131526]
+
+=item *
+
+Occasional "Malformed UTF-8 character" crashes in C<s//> on utf8 strings have
+been fixed. [perl #131575]
+
+=item *
+
+C<perldoc -f s> now finds C<s///>. [perl #131371]
+
+=item *
+
+Some erroneous warnings after utf8 conversion have been fixed. [perl #131190]
+
+=item *
+
+The C<jmpenv> frame to catch Perl exceptions is set up lazily, and this used
+to be a bit too lazy. The catcher is now set up earlier, preventing some
+possible crashes. [perl #105930]
+
+=item *
+
+Spurious "Assuming NOT a POSIX class" warnings have been removed. [perl #131522]
 
 =back
 
