--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -14,12 +14,6 @@ L<perl5242delta>, which describes differences between 5.24.1 and 5.24.2.
 
 =head1 Security
 
-XXX Any security-related notices go here.  In particular, any security
-vulnerabilities closed should be noted here rather than in the
-L</Selected Bug Fixes> section.
-
-[ List each security issue as a =head2 entry ]
-
 =head2 [CVE-2017-12837] Heap buffer overflow in regular expression compiler
 
 Compiling certain regular expression patterns with the case-insensitive
@@ -281,9 +275,33 @@ L<[perl #131260]|https://rt.perl.org/Public/Bug/Display.html?id=131260>
 
 =head1 Acknowledgements
 
-XXX Generate this with:
+Perl 5.24.3 represents approximately 2 months of development since Perl 5.24.2
+and contains approximately 3,100 lines of changes across 120 files from 20
+authors.
 
-  perl Porting/acknowledgements.pl v5.24.2..HEAD
+Excluding auto-generated files, documentation and release tools, there were
+approximately 1,500 lines of changes to 56 .pm, .t, .c and .h files.
+
+Perl continues to flourish into its third decade thanks to a vibrant community
+of users and developers.  The following people are known to have contributed
+the improvements that became Perl 5.24.3:
+
+Aaron Crane, Craig A. Berry, Dan Collins, Daniel Dragan, Dave Cross, David
+Mitchell, Eric Herman, Father Chrysostomos, H.Merijn Brand, Hugo van der
+Sanden, James E Keenan, Jarkko Hietaniemi, Karl Williamson, Lukas Mai, Matthew
+Horsfall, Stevan Little, Steve Hay, Steven Humphrey, Tony Cook, Yves Orton.
+
+The list above is almost certainly incomplete as it is automatically generated
+from version control history.  In particular, it does not include the names of
+the (very much appreciated) contributors who reported issues to the Perl bug
+tracker.
+
+Many of the changes included in this version originated in the CPAN modules
+included in Perl's core.  We're grateful to the entire CPAN community for
+helping Perl to flourish.
+
+For a more complete list of all of Perl's historical contributors, please see
+the F<AUTHORS> file in the Perl source distribution.
 
 =head1 Reporting Bugs
 
