--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -14,12 +14,6 @@ L<perl5260delta>, which describes differences between 5.24.0 and 5.26.0.
 
 =head1 Security
 
-XXX Any security-related notices go here.  In particular, any security
-vulnerabilities closed should be noted here rather than in the
-L</Selected Bug Fixes> section.
-
-[ List each security issue as a =head2 entry ]
-
 =head2 [CVE-2017-12837] Heap buffer overflow in regular expression compiler
 
 Compiling certain regular expression patterns with the case-insensitive
@@ -185,9 +179,34 @@ L<[perl #131522]|https://rt.perl.org/Public/Bug/Display.html?id=131522>
 
 =head1 Acknowledgements
 
-XXX Generate this with:
+Perl 5.26.1 represents approximately 3 months of development since Perl 5.26.0
+and contains approximately 8,800 lines of changes across 84 files from 21
+authors.
 
-  perl Porting/acknowledgements.pl v5.26.1..HEAD
+Excluding auto-generated files, documentation and release tools, there were
+approximately 960 lines of changes to 38 .pm, .t, .c and .h files.
+
+Perl continues to flourish into its third decade thanks to a vibrant community
+of users and developers.  The following people are known to have contributed
+the improvements that became Perl 5.26.1:
+
+Aaron Crane, Andy Dougherty, Aristotle Pagaltzis, Chris 'BinGOs' Williams,
+Craig A. Berry, Dagfinn Ilmari Mannsåker, David Mitchell, E. Choroba, Eric
+Herman, Father Chrysostomos, Jacques Germishuys, James E Keenan, Karl
+Williamson, Lukas Mai, Matthew Horsfall, Ricardo Signes, Sawyer X, Steve Hay,
+Tony Cook, Yves Orton, Zefram.
+
+The list above is almost certainly incomplete as it is automatically generated
+from version control history.  In particular, it does not include the names of
+the (very much appreciated) contributors who reported issues to the Perl bug
+tracker.
+
+Many of the changes included in this version originated in the CPAN modules
+included in Perl's core.  We're grateful to the entire CPAN community for
+helping Perl to flourish.
+
+For a more complete list of all of Perl's historical contributors, please see
+the F<AUTHORS> file in the Perl source distribution.
 
 =head1 Reporting Bugs
 
