--- a/pod/perlhist.pod
+++ b/pod/perlhist.pod
@@ -602,6 +602,7 @@ the strings?).
  Steve     5.24.1       2017-Jan-14
  Steve     5.24.2-RC1   2017-Jul-01
  Steve     5.24.2       2017-Jul-15
+ Steve     5.24.3-RC1   2017-Sep-10
 
  Ricardo   5.25.0       2016-May-09     The 5.25 development track
  Sawyer X  5.25.1       2016-May-20
@@ -620,6 +621,7 @@ the strings?).
  Sawyer X  5.26.0-RC1   2017-May-11     The 5.26 maintenance track
  Sawyer X  5.26.0-RC2   2017-May-23
  Sawyer X  5.26.0       2017-May-30
+ Steve     5.26.1-RC1   2017-Sep-10
 
  Sawyer X  5.27.0       2017-May-31     The 5.27 development track
  Eric      5.27.1       2017-Jun-20
