--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -411,6 +411,12 @@ from the caller.  Code that uses this, needn't use L<C<localeconv(3)>>
 (and be affected by the gotchas) to find the decimal point, thousands
 separator, or currency symbol.  See L<perlapi/Perl_langinfo>.
 
+=item *
+
+A new API function L<C<sv_rvunweaken()>|perlapi/sv_rvunweaken> has
+been added to complement L<C<sv_rvweaken()>|perlapi/sv_rvweaken>.
+The implementation was taken from L<Scalar::Util/unweaken>.
+
 =back
 
 =head1 Selected Bug Fixes
@@ -453,6 +459,12 @@ supplying NULL pointers to the functions these macros are built upon
 as undefined behaviour even when their count parameters are zero.
 Based on these assertions and the original bug report three macro
 calls were made conditional. [perl #131746][perl #131892]
+
+=item *
+
+The in-place sort optimisation now correctly strengthens weak
+references using the new L<C<sv_rvunweaken()>|perlapi/sv_rvunweaken>
+API function.
 
 =back
 
