--- a/pod/perlhist.pod
+++ b/pod/perlhist.pod
@@ -33,8 +33,8 @@ Matt S Trout, David Golden, Florian Ragwitz, Tatsuhiko Miyagawa,
 Chris C<BinGOs> Williams, Zefram, Ævar Arnfjörð Bjarmason, Stevan
 Little, Dave Rolsky, Max Maischein, Abigail, Jesse Luehrs, Tony Cook,
 Dominic Hargreaves, Aaron Crane, Aristotle Pagaltzis, Matthew Horsfall,
-Peter Martini, Sawyer X, Chad 'Exodist' Granum, Renee Bäcker,
-and Eric Herman.
+Peter Martini, Sawyer X, Chad 'Exodist' Granum, Renee Bäcker, Eric Herman,
+and John SJ Anderson.
 
 =head2 PUMPKIN?
 
@@ -627,6 +627,7 @@ the strings?).
  Eric      5.27.1       2017-Jun-20
  Aaron     5.27.2       2017-Jul-20
  Matthew H 5.27.3       2017-Aug-21
+ John      5.27.4       2017-Sep-20
 
 =head2 SELECTED RELEASE SIZES
 
