--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -2,86 +2,122 @@
 
 =head1 NAME
 
-perldelta - what is new for perl v5.27.4
+[ this is a template for a new perldelta file.  Any text flagged as XXX needs
+to be processed before release. ]
+
+perldelta - what is new for perl v5.27.5
 
 =head1 DESCRIPTION
 
-This document describes differences between the 5.27.3 release and the 5.27.4
+This document describes differences between the 5.27.4 release and the 5.27.5
 release.
 
-If you are upgrading from an earlier release such as 5.27.2, first read
-L<perl5273delta>, which describes differences between 5.27.2 and 5.27.3.
+If you are upgrading from an earlier release such as 5.27.3, first read
+L<perl5274delta>, which describes differences between 5.27.3 and 5.27.4.
+
+=head1 Notice
+
+XXX Any important notices here
 
 =head1 Core Enhancements
 
-=head2 In-place editing is now safer
+XXX New core language features go here.  Summarize user-visible core language
+enhancements.  Particularly prominent performance optimisations could go
+here, but most should go in the L</Performance Enhancements> section.
 
-Previously in-place editing would delete or rename the input file
-as soon as you started working on a new file.
-
-Without backups this would result in loss of data if there was an
-error, such as a full disk, when writing to the output file.
-
-This has changed so that the input file isn't replaced until the
-output file has been completely written and successfully closed.
-
-This works by creating a work file in the same directory, which is
-renamed over the input file once the output file is complete.
-
-Incompatibilities:
-
-=over
-
-=item *
-
-Since this renaming needs to only happen once, if you create a thread
-or child process, that renaming will only happen in the original
-thread or process.
-
-=item *
-
-If you change directories while processing a file, and your operating
-system doesn't provide the C<unlinkat()>, C<renameat()> and C<fchmodat()>
-functions, the final rename step may fail.
-
-=back
-
-L<[perl #127663]|https://rt.perl.org/Public/Bug/Display.html?id=127663>
+[ List each enhancement as a =head2 entry ]
 
 =head1 Security
 
-=head2 [CVE-2017-12837] Heap buffer overflow in regular expression compiler
+XXX Any security-related notices go here.  In particular, any security
+vulnerabilities closed should be noted here rather than in the
+L</Selected Bug Fixes> section.
 
-Compiling certain regular expression patterns with the case-insensitive
-modifier could cause a heap buffer overflow and crash perl.  This has now been
-fixed.
-L<[perl #131582]|https://rt.perl.org/Public/Bug/Display.html?id=131582>
+[ List each security issue as a =head2 entry ]
 
-=head2 [CVE-2017-12883] Buffer over-read in regular expression parser
+=head1 Incompatible Changes
 
-For certain types of syntax error in a regular expression pattern, the error
-message could either contain the contents of a random, possibly large, chunk of
-memory, or could crash perl.  This has now been fixed.
-L<[perl #131598]|https://rt.perl.org/Public/Bug/Display.html?id=131598>
+XXX For a release on a stable branch, this section aspires to be:
 
-=head2 [CVE-2017-12814] C<$ENV{$key}> stack buffer overflow on Windows
+    There are no changes intentionally incompatible with 5.XXX.XXX
+    If any exist, they are bugs, and we request that you submit a
+    report.  See L</Reporting Bugs> below.
 
-A possible stack buffer overflow in the C<%ENV> code on Windows has been fixed
-by removing the buffer completely since it was superfluous anyway.
-L<[perl #131665]|https://rt.perl.org/Public/Bug/Display.html?id=131665>
+[ List each incompatible change as a =head2 entry ]
+
+=head1 Deprecations
+
+XXX Any deprecated features, syntax, modules etc. should be listed here.
+
+=head2 Module removals
+
+XXX Remove this section if inapplicable.
+
+The following modules will be removed from the core distribution in a
+future release, and will at that time need to be installed from CPAN.
+Distributions on CPAN which require these modules will need to list them as
+prerequisites.
+
+The core versions of these modules will now issue C<"deprecated">-category
+warnings to alert you to this fact.  To silence these deprecation warnings,
+install the modules in question from CPAN.
+
+Note that these are (with rare exceptions) fine modules that you are encouraged
+to continue to use.  Their disinclusion from core primarily hinges on their
+necessity to bootstrapping a fully functional, CPAN-capable Perl installation,
+not usually on concerns over their design.
+
+=over
+
+=item XXX
+
+XXX Note that deprecated modules should be listed here even if they are listed
+as an updated module in the L</Modules and Pragmata> section.
+
+=back
+
+[ List each other deprecation as a =head2 entry ]
 
 =head1 Performance Enhancements
+
+XXX Changes which enhance performance without changing behaviour go here.
+There may well be none in a stable release.
+
+[ List each enhancement as an =item entry ]
 
 =over 4
 
 =item *
 
-Slightly improved performance when parsing stash names.
-L<[perl #129990]|https://rt.perl.org/Public/Bug/Display.html?id=129990>
+XXX
 
 =back
 
 =head1 Modules and Pragmata
+
+XXX All changes to installed files in F<cpan/>, F<dist/>, F<ext/> and F<lib/>
+go here.  If Module::CoreList is updated, generate an initial draft of the
+following sections using F<Porting/corelist-perldelta.pl>.  A paragraph summary
+for important changes should then be added by hand.  In an ideal world,
+dual-life modules would have a F<Changes> file that could be cribbed.
+
+The list of new and updated modules is modified automatically as part of
+preparing a Perl release, so the only reason to manually add entries here is if
+you're summarising the important changes in the module update. (Also, if the
+manually-added details don't match the automatically-generated ones, the
+release manager will have to investigate the situation carefully.)
+
+[ Within each section, list entries as an =item entry ]
+
+=head2 New Modules and Pragmata
+
+=over 4
+
+=item *
+
+XXX
+
+=back
 
 =head2 Updated Modules and Pragmata
 
@@ -89,38 +125,7 @@ L<[perl #129990]|https://rt.perl.org/Public/Bug/Display.html?id=129990>
 
 =item *
 
-L<attributes> has been upgraded from version 0.3 to 0.31.
-
-=item *
-
-L<File::Glob> has been upgraded from version 1.29 to 1.30.
-
-=item *
-
-L<I18N::Langinfo> has been upgraded from version 0.13 to 0.14.
-This fixes a bug in which the underlying locale was ignored for the
-C<RADIXCHAR> (always was returned as a dot, and the C<THOUSEP> (always
-empty).  Now the locale-appropriate values are returned.
-
-=item *
-
-L<Module::CoreList> has been upgraded from version 5.20170821 to 5.20170920.
-
-=item *
-
-L<sort> has been upgraded from version 2.02 to 2.03.
-
-=item *
-
-L<Term::ReadLine> has been upgraded from version 1.16 to 1.17.
-
-=item *
-
-L<threads> has been upgraded from version 2.17 to 2.18.
-
-=item *
-
-L<VMS::Stdio> has been upgraded from version 2.41 to 2.42.
+L<XXX> has been upgraded from version A.xx to B.yy.
 
 =back
 
@@ -130,7 +135,42 @@ L<VMS::Stdio> has been upgraded from version 2.41 to 2.42.
 
 =item *
 
-The C<VMS::stdio> compatibility shim has been removed.
+XXX
+
+=back
+
+=head1 Documentation
+
+XXX Changes to files in F<pod/> go here.  Consider grouping entries by
+file and be sure to link to the appropriate page, e.g. L<perlfunc>.
+
+=head2 New Documentation
+
+XXX Changes which create B<new> files in F<pod/> go here.
+
+=head3 L<XXX>
+
+XXX Description of the purpose of the new file here
+
+=head2 Changes to Existing Documentation
+
+We have attempted to update the documentation to reflect the changes
+listed in this document.  If you find any we have missed, send email
+to L<perlbug@perl.org|mailto:perlbug@perl.org>.
+
+XXX Changes which significantly change existing files in F<pod/> go here.
+However, any changes to F<pod/perldiag.pod> should go in the L</Diagnostics>
+section.
+
+Additionally, the following selected changes have been made:
+
+=head3 L<XXX>
+
+=over 4
+
+=item *
+
+XXX Description of the change here
 
 =back
 
@@ -140,178 +180,228 @@ The following additions or changes have been made to diagnostic output,
 including warnings and fatal error messages.  For the complete list of
 diagnostic messages, see L<perldiag>.
 
-=head2 Changes to Existing Diagnostics
+XXX New or changed warnings emitted by the core's C<C> code go here.  Also
+include any changes in L<perldiag> that reconcile it to the C<C> code.
+
+=head2 New Diagnostics
+
+XXX Newly added diagnostic messages go under here, separated into New Errors
+and New Warnings
+
+=head3 New Errors
 
 =over 4
 
 =item *
 
-A false-positive warning that was issued when using a
-numerically-quantified sub-pattern in a recursive regex has been
-silenced. L<[perl #131868]|https://rt.perl.org/Public/Bug/Display.html?id=131868>
+XXX L<message|perldiag/"message">
+
+=back
+
+=head3 New Warnings
+
+=over 4
+
+=item *
+
+XXX L<message|perldiag/"message">
+
+=back
+
+=head2 Changes to Existing Diagnostics
+
+XXX Changes (i.e. rewording) of diagnostic messages go here
+
+=over 4
+
+=item *
+
+XXX Describe change here
+
+=back
+
+=head1 Utility Changes
+
+XXX Changes to installed programs such as F<perlbug> and F<xsubpp> go here.
+Most of these are built within the directory F<utils>.
+
+[ List utility changes as a =head2 entry for each utility and =item
+entries for each change
+Use L<XXX> with program names to get proper documentation linking. ]
+
+=head2 L<XXX>
+
+=over 4
+
+=item *
+
+XXX
+
+=back
+
+=head1 Configuration and Compilation
+
+XXX Changes to F<Configure>, F<installperl>, F<installman>, and analogous tools
+go here.  Any other changes to the Perl build process should be listed here.
+However, any platform-specific changes should be listed in the
+L</Platform Support> section, instead.
+
+[ List changes as an =item entry ].
+
+=over 4
+
+=item *
+
+XXX
 
 =back
 
 =head1 Testing
 
+XXX Any significant changes to the testing of a freshly built perl should be
+listed here.  Changes which create B<new> files in F<t/> go here as do any
+large changes to the testing harness (e.g. when parallel testing was added).
+Changes to existing files in F<t/> aren't worth summarizing, although the bugs
+that they represent may be covered elsewhere.
+
+XXX If there were no significant test changes, say this:
+
 Tests were added and changed to reflect the other additions and changes
 in this release.
 
-=head1 Platform Support
+XXX If instead there were significant changes, say this:
 
-=head2 Platform-Specific Notes
+Tests were added and changed to reflect the other additions and
+changes in this release.  Furthermore, these significant changes were
+made:
+
+[ List each test improvement as an =item entry ]
 
 =over 4
 
-=item Darwin
+=item *
 
-Perl now correctly uses reentrant functions, like C<asctime_r>, on
-versions of Darwin that have support for them.
+XXX
+
+=back
+
+=head1 Platform Support
+
+XXX Any changes to platform support should be listed in the sections below.
+
+[ Within the sections, list each platform as an =item entry with specific
+changes as paragraphs below it. ]
+
+=head2 New Platforms
+
+XXX List any platforms that this version of perl compiles on, that previous
+versions did not.  These will either be enabled by new files in the F<hints/>
+directories, or new subdirectories and F<README> files at the top level of the
+source tree.
+
+=over 4
+
+=item XXX-some-platform
+
+XXX
+
+=back
+
+=head2 Discontinued Platforms
+
+XXX List any platforms that this version of perl no longer compiles on.
+
+=over 4
+
+=item XXX-some-platform
+
+XXX
+
+=back
+
+=head2 Platform-Specific Notes
+
+XXX List any changes for specific platforms.  This could include configuration
+and compilation changes or changes in portability/compatibility.  However,
+changes within modules for platforms should generally be listed in the
+L</Modules and Pragmata> section.
+
+=over 4
+
+=item XXX-some-platform
+
+XXX
 
 =back
 
 =head1 Internal Changes
 
+XXX Changes which affect the interface available to C<XS> code go here.  Other
+significant internal changes for future core maintainers should be noted as
+well.
+
+[ List each change as an =item entry ]
+
 =over 4
 
 =item *
 
-A new function, L<C<Perl_langinfo()>|perlapi/Perl_langinfo> has been
-added.  It is an (almost) drop-in replacement for the system
-C<nl_langinfo(3)>, but works on platforms that lack that; as well as
-being more thread-safe, and hiding some gotchas with locale handling
-from the caller.  Code that uses this, needn't use L<C<localeconv(3)>>
-(and be affected by the gotchas) to find the decimal point, thousands
-separator, or currency symbol.  See L<perlapi/Perl_langinfo>.
-
-=item *
-
-A new API function L<C<sv_rvunweaken()>|perlapi/sv_rvunweaken> has
-been added to complement L<C<sv_rvweaken()>|perlapi/sv_rvweaken>.
-The implementation was taken from L<Scalar::Util/unweaken>.
-
-=item *
-
-A new flag, C<SORTf_UNSTABLE>, has been added. This will allow a
-future commit to make mergesort unstable when the user specifies ‘no
-sort stable’, since it has been decided that mergesort should remain
-stable by default.
+XXX
 
 =back
 
 =head1 Selected Bug Fixes
 
+XXX Important bug fixes in the core language are summarized here.  Bug fixes in
+files in F<ext/> and F<lib/> are best summarized in L</Modules and Pragmata>.
+
+[ List each fix as an =item entry ]
+
 =over 4
 
 =item *
 
-The internal stack usage checks introduced in 5.27.2 are now also done
-by the C<entersub> operator when calling XSUBs.  This means we can
-report which XSUB failed to allocate enough stack space.
-L<[perl #131975]|https://rt.perl.org/Public/Bug/Display.html?id=131975>
-
-=item *
-
-Parsing a C<sub> definition could cause a use after free if the C<sub>
-keyword was followed by whitespace including newlines (and comments.)
-L<[perl #131836]|https://rt.perl.org/Public/Bug/Display.html?id=131836>
-
-=item *
-
-The tokenizer now correctly adjusts a parse pointer when skipping
-whitespace in a C< ${identifier} > construct.
-L<[perl #131949]|https://rt.perl.org/Public/Bug/Display.html?id=131949>
-
-=item *
-
-Accesses to C<${^LAST_FH}> no longer assert after using any of a
-variety of I/O operations on a non-glob.
-L<[perl #128263]|https://rt.perl.org/Public/Bug/Display.html?id=128263>
-
-=item *
-
-The C<Copy()>, C<Move()>, C<Zero()> macros and their variants now
-assert if the pointers supplied are C<NULL>.  ISO C considers
-supplying NULL pointers to the functions these macros are built upon
-as undefined behaviour even when their count parameters are zero.
-Based on these assertions and the original bug report three macro
-calls were made conditional.
-L<[perl #131746]|https://rt.perl.org/Public/Bug/Display.html?id=131746>
-L<[perl #131892]|https://rt.perl.org/Public/Bug/Display.html?id=131892>
-
-=item *
-
-The in-place sort optimisation now correctly strengthens weak
-references using the new L<C<sv_rvunweaken()>|perlapi/sv_rvunweaken>
-API function.
-
-=item *
-
-Only the C<=> operator is permitted for defining defaults for
-parameters in subroutine signatures.  Previously other assignment
-operators, e.g. C<+=>, were also permitted.
-L<[perl #131777]|https://rt.perl.org/Public/Bug/Display.html?id=131777>
-
-=item *
-
-Package names are now always included in C<:prototype> warnings
-L<[perl #131833]|https://rt.perl.org/Public/Bug/Display.html?id=131833>
-
-=item *
-
-Creating a thread with no parameters no longer tries to C<Copy()> a
-null pointer. This fixes an assertion failure and allows threaded
-builds to work again.
-
-=item *
-
-The C<je_old_stack_hwm> field, previously only found in the C<jmpenv>
-structure on debugging builds, has been added to non-debug builds as
-well. This fixes an issue with some CPAN modules caused by the size of
-this structure varying between debugging and non-debugging builds.
-L<[perl #131942]|https://rt.perl.org/Public/Bug/Display.html?id=131942>
-
-=item *
-
-The arguments to the C<ninstr()> macro are now correctly parenthesized.
-
-=item *
-
-A NULL pointer dereference in the C<S_regmatch()> function has been
-fixed.
-L<[perl #132017]|https://rt.perl.org/Public/Bug/Display.html?id=132017>
+XXX
 
 =back
 
+=head1 Known Problems
+
+XXX Descriptions of platform agnostic bugs we know we can't fix go here.  Any
+tests that had to be C<TODO>ed for the release would be noted here.  Unfixed
+platform specific bugs also go here.
+
+[ List each fix as an =item entry ]
+
+=over 4
+
+=item *
+
+XXX
+
+=back
+
+=head1 Errata From Previous Releases
+
+=over 4
+
+=item *
+
+XXX Add anything here that we forgot to add, or were mistaken about, in
+the perldelta of a previous release.
+
+=back
+
+=head1 Obituary
+
+XXX If any significant core contributor has died, we've added a short obituary
+here.
+
 =head1 Acknowledgements
 
-Perl 5.27.4 represents approximately 4 weeks of development since Perl 5.27.3
-and contains approximately 5,000 lines of changes across 140 files from 18
-authors.
+XXX Generate this with:
 
-Excluding auto-generated files, documentation and release tools, there were
-approximately 3,300 lines of changes to 76 .pm, .t, .c and .h files.
-
-Perl continues to flourish into its third decade thanks to a vibrant community
-of users and developers. The following people are known to have contributed the
-improvements that became Perl 5.27.4:
-
-Abigail, Chris 'BinGOs' Williams, Dagfinn Ilmari Mannsåker, David Mitchell,
-Dominic Hargreaves, Father Chrysostomos, H.Merijn Brand, James E Keenan, Jarkko
-Hietaniemi, John SJ Anderson, Karl Williamson, Lukas Mai, Matthew Horsfall,
-Neil Bowers, Nicolas R., Steve Hay, Tony Cook, Yves Orton.
-
-The list above is almost certainly incomplete as it is automatically generated
-from version control history. In particular, it does not include the names of
-the (very much appreciated) contributors who reported issues to the Perl bug
-tracker.
-
-Many of the changes included in this version originated in the CPAN modules
-included in Perl's core. We're grateful to the entire CPAN community for
-helping Perl to flourish.
-
-For a more complete list of all of Perl's historical contributors, please see
-the F<AUTHORS> file in the Perl source distribution.
+  perl Porting/acknowledgements.pl v5.25.5..HEAD
 
 =head1 Reporting Bugs
 
